--- a/src/scss/layout/Partners.module.scss
+++ b/src/scss/layout/Partners.module.scss
@@ -3,7 +3,8 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 0 -2rem;
+  padding: 0 -2rem;
+  text-align: center;
 
   .card {
     margin: 1rem 2rem;
